--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "type": "module",
   "engines": {
-    "node": "^18.0.0",
+    "node": "^16.0.0",
     "npm": ">=8"
+  },
+  "dependencies": {
+    "chalk": "^5.2.0"
   }
 }
